FIXED SPACING

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@
     #title{
         width: 100%;
         height: 100%;
-        margin-top:15%;
-        margin-bottom:20%;
+        margin-top:8%;
+        margin-bottom:13%;
     }
 
     #profile{
@@ -26,8 +26,8 @@
     }
     @media screen and (max-width: 700px){
         #title{
-            margin-top:20%;
-            margin-bottom: 20%;
+            margin-top:25%;
+            margin-bottom: 25%;
 
         }
     }
